configs/allow-more.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: allow-more
spec:
  selector:
    matchLabels:
      app: java-server
  action: ALLOW
  rules:
  - to:
    - operation:
        methods: ["POST"]
        paths: ["/auth"]
