configs/allow-something.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: "allow-something"
spec:
  action: ALLOW
  rules:
  - to:
    - operation:
        methods: ["GET"]
